crates/ty_python_semantic/resources/mdtest/snapshots/Shadowing_-_shadowing.md_-_Implicit_function_sh…_(f99f2f131e465f1).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Shadowing - shadowing.md - Implicit function shadowing
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/shadowing.md
---

# Python source files

## mdtest_snippet.py

```
1 | def f(): ...
2 | 
3 | f = 1  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Implicit shadowing of function `f`
 --> src/mdtest_snippet.py:3:1
  |
1 | def f(): ...
2 |
3 | f = 1  # error: [invalid-assignment]
  | ^
  |
info: Annotate to make it explicit if this is intentional
info: rule `invalid-assignment` is enabled by default

```
