crates/ty_python_semantic/resources/mdtest/snapshots/Structures_-_basic.md_-_Multiple_objects_imp…_(6399a9db36b4a1d9).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Structures - basic.md - Multiple objects imported from an unresolved module
mdtest path: crates/ty_python_semantic/resources/mdtest/import/basic.md
---

# Python source files

## mdtest_snippet.py

```
1 | # error: [unresolved-import]
2 | from does_not_exist import foo, bar, baz
```

# Diagnostics

```
error[unresolved-import]: Cannot resolve imported module `does_not_exist`
 --> src/mdtest_snippet.py:2:6
  |
1 | # error: [unresolved-import]
2 | from does_not_exist import foo, bar, baz
  |      ^^^^^^^^^^^^^^
  |
info: rule `unresolved-import` is enabled by default

```
