crates/ty_python_semantic/resources/mdtest/snapshots/Structures_-_basic.md_-_Unresolvable_module_…_(acd1fb6c8625942e).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Structures - basic.md - Unresolvable module import
mdtest path: crates/ty_python_semantic/resources/mdtest/import/basic.md
---

# Python source files

## mdtest_snippet.py

```
1 | import zqzqzqzqzqzqzq  # error: [unresolved-import] "Cannot resolve imported module `zqzqzqzqzqzqzq`"
```

# Diagnostics

```
error[unresolved-import]: Cannot resolve imported module `zqzqzqzqzqzqzq`
 --> src/mdtest_snippet.py:1:8
  |
1 | import zqzqzqzqzqzqzq  # error: [unresolved-import] "Cannot resolve imported module `zqzqzqzqzqzqzq`"
  |        ^^^^^^^^^^^^^^
  |
info: rule `unresolved-import` is enabled by default

```
