crates/ty_python_semantic/resources/mdtest/snapshots/Tests_for_a_variety_…_-_Invalid_argument_typ…_-_invalid_argument_typ…_-_Only_positional_(b653b46611c38702).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Tests for a variety of argument types - Invalid argument type diagnostics - invalid_argument_type.md - Only positional
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def foo(x: int, y: int, z: int, /) -> int:
2 |     return x * y * z
3 | 
4 | foo(1, "hello", 3)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
 --> src/mdtest_snippet.py:4:8
  |
2 |     return x * y * z
3 |
4 | foo(1, "hello", 3)  # error: [invalid-argument-type]
  |        ^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:1:5
  |
1 | def foo(x: int, y: int, z: int, /) -> int:
  |     ^^^         ------ Parameter declared here
2 |     return x * y * z
  |
info: rule `invalid-argument-type` is enabled by default

```
